# ssd-fairness

./: CMakeLists.txt  README.md  run.sh  uml.puml
include/: events.hpp  metrics.hpp  scheduler.hpp  scheduler_impl.hpp  ssd.hpp  types.hpp  util.hpp
src/: main.cpp  metrics.cpp  scheduler.cpp  ssd.cpp  util.cpp
tools/: plot_results.py  trace_gen.py
traces/: README.md  converted_trace_v2.csv  example.csv  synthetic.csv
